# UUIDFetcher

./: Cargo.toml  Dockerfile  README.md
src/: cli.rs  main.rs
